# VoxelEngine-Cpp

./: CMakeLists.txt  build.bat
include/: my_file.h
rust/: CMakeLists.txt  Cargo.toml  builds.rs
rust/src/: lib.rs  main.rs
rust/src/ffi/: logger.rs
src/: CMakeLists.txt  main.cpp  my_file.cpp
src/coders/: imageio.cpp  vec3.cpp  vec3.hpp
src/debug/: Logger.cpp  Logger.hpp
src/engine/: ServerMainloop.cpp
src/io/: engine_paths.cpp
src/io/devices/: StdfsDevice.cpp
src/logic/scripting/lua/: lua_engine.cpp
src/util/: platform.cpp
test/data/: StructLayout.cpp
test/util/: stringutil.cpp
